--- a/chen_pm/pm_small/pm_chen_reproduce_FRK.rmd
+++ b/chen_pm/pm_small/pm_chen_reproduce_FRK.rmd
@@ -172,32 +172,29 @@ for (i in 1:nrow(pm_cov)) {
   basis_arr_3[i,,] <- matrix(basis_use_3_2d[i,], nrow = shape_row_3, ncol = shape_col_3, byrow = T)
 }
 
-
-
-
-
-  test_idx <- 1
-  
-  
-# Convert matrix to dataframe
-library(reshape2)
-df <- melt(basis_arr_2[test_idx,,])
-colnames(df) <- c("x", "y", "z")
-
-# Create heatmap using ggplot2
-library(ggplot2)
-
-ggplot(df, aes(x = x, y = y, fill = z)) +
-  geom_tile() +
-  scale_fill_gradient(low = "white", high = "red") +
-  xlab("X") +
-  ylab("Y") +
-  labs(fill = "Z")
-
-
-  ggplot() +
-    geom_contour_filled(aes(x = seq(from = 0, to = 1, length.out = 3), y = seq(from = 0, to = 1, length.out = 3), fill = as.vector(basis_arr_1[test_idx, , ]))) +
-    geom_point(aes(x = scaled_coords[test_idx,1], y = scaled_coords[test_idx,2]))
+# 
+#   test_idx <- 1
+#   
+#   
+# # Convert matrix to dataframe
+# library(reshape2)
+# df <- melt(basis_arr_2[test_idx,,])
+# colnames(df) <- c("x", "y", "z")
+# 
+# # Create heatmap using ggplot2
+# library(ggplot2)
+# 
+# ggplot(df, aes(x = x, y = y, fill = z)) +
+#   geom_tile() +
+#   scale_fill_gradient(low = "white", high = "red") +
+#   xlab("X") +
+#   ylab("Y") +
+#   labs(fill = "Z")
+# 
+# 
+#   ggplot() +
+#     geom_contour_filled(aes(x = seq(from = 0, to = 1, length.out = 3), y = seq(from = 0, to = 1, length.out = 3), fill = as.vector(basis_arr_1[test_idx, , ]))) +
+#     geom_point(aes(x = scaled_coords[test_idx,1], y = scaled_coords[test_idx,2]))
 
 
 # DNN Model
@@ -492,7 +489,13 @@ loss_ck
 
 loss_dk
 
-loss_nngp
+loss_all <- as.data.frame(cbind(loss_dk, loss_ck))
+ggplot() +
+  geom_boxplot(data = reshape2::melt(loss_all), aes(x = variable, y = value)) +
+   coord_flip()
+write.csv(as.data.frame(loss_all),here::here("chen_pm/pm_small/loss_frk_dck.csv"),row.names = FALSE)
+
+
 ```
 
 
